--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-ktor_version = 2.1.0
-kotlin_version = 1.7.10
-logback_version = 1.2.11
-koin_version = 3.2.0
-kmongo_version = 4.7.0
-jquery_version = 3.6.0
-kotlin_css_version = 1.0.0-pre.324-kotlin-1.6.10
+ktorVersion = 2.1.2
+kotlinVersion = 1.7.20
+logbackVersion = 1.4.1
+koinVersion = 3.2.1
+kmongoVersion = 4.7.1
+jqueryVersion = 3.6.1
+kotlinCssVersion = 1.0.0-pre.324-kotlin-1.6.10
 kotlin.code.style = official
