--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-ktorVersion = 2.1.2
-kotlinVersion = 1.7.20
-logbackVersion = 1.4.1
-koinVersion = 3.2.1
-kmongoVersion = 4.7.1
-jqueryVersion = 3.6.1
-kotlinCssVersion = 1.0.0-pre.324-kotlin-1.6.10
+ktor_version = 2.1.2
+kotlin_version = 1.7.20
+logback_version = 1.4.1
+koin_version = 3.2.2
+kmongo_version = 4.7.1
+jquery_version = 3.6.1
+kotlin_css_version = 1.0.0-pre.324-kotlin-1.6.10
 kotlin.code.style = official
